syntax = "proto3";
option java_multiple_files = true;

option java_package = "org.mixql.protobuf.messages";

option java_outer_classname = "ZioRemoteProto"; //??
option objc_class_prefix = "RTG"; //??

package MixQlRemote;

//service ZioGrpcRemote {
//  rpc SendZioMsgTest1 (ZioMsgTest1) returns (ZioMsgTestReply) {}
//  rpc SendZioMsgTest2Array (ZioMsgTest2Array) returns (ZioMsgTestReply) {}
//  rpc SendZioMsgTest3Map (ZioMsgTest3Map) returns (ZioMsgTestReply) {}
//  rpc SendShutDown (ShutDown) returns (ZioMsgTestReply) {} //Can it be without returns?
//}

message EngineName{
  string msg = 1;
}

message ShutDown{}

message Execute{
  string statement = 1;
}

import "google/protobuf/any.proto";
message Param{
  string name = 1;
  google.protobuf.Any value = 2;
}

message SetParam{
  string name = 1;
  google.protobuf.Any value = 2;
}

message GetParam{
  string name = 1;
}

message ParamWasSet{}

message IsParam{
  string name = 1;
}

message AnyMsg{
  string type = 1;
  google.protobuf.Any msg = 2;
}

message Error{
  string msg = 1;
}

message ExecuteFunction{
  string name = 1;
  Array params = 2;
}

message GetDefinedFunctions{}

message DefinedFunctions{
  repeated string arr = 1;
}

//Types

message NULL{}

message Bool{
  bool value = 1;
}

message Int{
  int32 value = 1;
}

message Double{
  double value = 1;
}

message String{
  string value = 1;
  string quote = 2;
}

message Array{
  repeated google.protobuf.Any arr = 1;
}

//message ZioMsgTest3Map{
//  map<string, string> MsgMap = 1;
//}

//message ZioMsgTestReply{
//  string msg = 1;
//}

